Updated on html and css files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <!-- Start Header -->
-  <div class="arrow center-flex"><a href="#home">Home</a></div>
+  <div class="arrow"><a href="#home"><i class="fas fa-chevron-up"></i></a></div>
   <header id="home">
     <div class="container">
       <div class="logo">Elzero</div>
@@ -75,6 +75,7 @@
     </div>
   </div>
   <!-- End About -->
+
   <!-- Start Rate -->
   <div class="rate">
     <div class="container">
